fix login box z-index

--- a/app/css/nav.scss
+++ b/app/css/nav.scss
@@ -68,6 +68,7 @@
         margin-top: -50px;
         position: absolute;
         width: 100%;
+        z-index: 1000;
     }
 
     &__button {
